--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     .body { width: 100vw; height: 100vh; padding: 0px; margin: 0px; overflow: hidden;};
   </style>
   <script async src="./taterloader.js"></script>
+   <script src="https://unpkg.com/@ungap/custom-elements-builtin"></script>
+   <script type="module" src="https://unpkg.com/x-frame-bypass"></script>
 </head>
 
 <body class="body">
@@ -19,6 +21,6 @@
     }, 10000);
   </script>
 
-  <iframe src="https://example.com" style="box-shadow: none !important; width: 100vw; height: 100vh;"></iframe>
+  <iframe is="x-frame-bypass" src="https://example.com" style="box-shadow: none !important; width: 100vw; height: 100vh;"></iframe>
 </body>
 
